--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -68,7 +68,6 @@
         <div class="hero__item left">
           <span>Futur Développeur d'application</span>
           <h1 class="title">Bonjour, Je suis Romain Rodriguez</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="hero__item right">
           <div class="hero__avatar">
@@ -84,14 +83,9 @@
       <div class="grid">
         <div class="grid__item">
           <h2 class="section-title">A propos</h2>
-          <h3>Qui suis-je</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <strong>Mot ou portion de phrase
-              importante</strong>, ipsum aut
-            beatae quis nemo dolore! Culpa officia explicabo obcaecati sint!
-          </p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <strong>Mot ou portion de phrase
-              importante</strong>, ipsum aut
-            beatae quis nemo dolore! Culpa officia explicabo obcaecati sint!
+          <h3>Qui suis-je ?</h3>
+          <p>Passionné d’informatique et de nouvelles technologies depuis toujours,
+            c’est avec enthousiasme que je démarre ce nouveau chapitre de ma vie professionnelle”.
           </p>
         </div>
       </div>
@@ -101,12 +95,9 @@
     <div class="container">
       <div class="section-header">
         <h2 class="section-title">Mon parcours</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius eos dolore obcaecati perspiciatis. Eos neque
-          similique placeat doloremque cupiditate, ut vero autem officia repellat explicabo, doloribus vel? Culpa, fuga
-          quod!</p>
       </div>
       <div>
-        <iframe src="img\CVRODR_20231106_232317_0000.pdf#toolbar=0" width="100%" height="500px"> </iframe>
+        <img src="img\CVRODR-1.png">
     </div>
       
 
@@ -115,9 +106,6 @@
     <div class="container">
       <div class="section-header">
         <h2 class="section-title">Mes compétences</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius eos dolore obcaecati perspiciatis. Eos neque
-          similique placeat doloremque cupiditate, ut vero autem officia repellat explicabo, doloribus vel? Culpa, fuga
-          quod!</p>
       </div>
       <div class="grid">
         <div class="grid__item">
